==> therealdreg/okhi/firmware/usb/rp/okhi.c <==
#include "hardware/adc.h"
#include "hardware/clocks.h"
#include "hardware/flash.h"
#include "hardware/irq.h"
#include "hardware/pio.h"
#include "hardware/pll.h"
#include "hardware/regs/io_qspi.h"
#include "hardware/spi.h"
#include "hardware/structs/clocks.h"
#include "hardware/structs/ioqspi.h"
#include "hardware/structs/pll.h"
#include "hardware/structs/sio.h"
#include "hardware/sync.h"
#include "hardware/timer.h"
#include "hardware/uart.h"
#include "hardware/watchdog.h"
#include "okhi.pio.h"
#include "pico/bootrom.h"
#include "pico/multicore.h"
#include "pico/stdlib.h"
#include <stdio.h>
#include <string.h>
#include "../../../../last_firmv.h"
#include "../../com/com.h"
#include "../../com/com_rp.h"
#define __core1_func(x) __scratch_y(__STRING(x)) x
#define __core2_func(x) __scratch_x(__STRING(x)) x
#define GPIO_A 4
#define GPIO_B 5
#define USSEL_PIN 8
#define USOE_PIN 9
#define BP() __asm("bkpt #1"); // breakpoint via software macro
#define DP_INDEX 20
#define DM_INDEX 21
#define START_INDEX 22
#define TRIGGER_INDEX 18
#define FLASH_PAGE_SIZE 256
#define FLASH_SECTOR_SIZE 4096
#define FLASH_TOTAL_SIZE (16 * 1024 * 1024)
#define UART_TO_ESP_BAUD_RATE 74880 // WARNING: Never change this value
#define DATA_BITS 8
#define STOP_BITS 1
#define PARITY UART_PARITY_NONE
#define SPI_BAUD 5000000 // ~4.6 mhz
#define SPI_ID spi1
#define SPI_SCK_PIN 10
#define SPI_MOSI_PIN 11
#define SPI_MISO_PIN 12
#define SPI_CS_PIN 13
#define RP_ADC_GPIO 27 // From PCB v5

static bool print_packet(void)
{
    int flags = last_dbuff->g_buffer[g_display_ptr];
    int time = last_dbuff->g_buffer[g_display_ptr + 1];
    int ftime = time - g_ref_time;
    int delta = time - g_prev_time;
    int size = flags & CAPTURE_SIZE_MASK;
    uint8_t *payload = (uint8_t *)&(last_dbuff->g_buffer[g_display_ptr + 2]);
    int pid = payload[1] & 0x0f;
    static bool last_pid_in = false;
    static uint8_t *last_payload = NULL;

    last_payload = (uint8_t *)&(last_dbuff->g_buffer[g_display_ptr + 2]);

    if (g_check_delta && delta > MAX_PACKET_DELTA)
    {
        printf("Time delta between packets is too large, possible buffer corruption.\r\n");
        return false;
    }

    g_display_ptr += (((size + 3) / 4) + 2);

    g_prev_time = time;
    g_check_delta = true;

    if (flags & CAPTURE_LS_SOF)
    {
        pid = Pid_Sof;
    }

    if ((g_display_time == DisplayTime_SOF && pid == Pid_Sof) || (g_display_time == DisplayTime_Previous))
    {
        g_ref_time = time;
    }

    if (g_folding)
    {
        if (pid != Pid_Sof)
        {
            return true;
        }

        if (flags & CAPTURE_MAY_FOLD)
        {
            g_fold_count++;
            return true;
        }

        // print_g_fold_count(g_fold_count);
        g_folding = false;
    }

    if (flags & CAPTURE_MAY_FOLD && g_display_fold == DisplayFold_Enabled)
    {
        g_folding = true;
        g_fold_count = 1;
        return true;
    }

    // print_time(ftime);

    if (flags & CAPTURE_RESET)
    {
        // print_reset();

        if (g_display_time == DisplayTime_Reset)
        {
            g_ref_time = time;
        }

        g_check_delta = false;

        return true;
    }

    if (flags & CAPTURE_LS_SOF)
    {
        // print_ls_sof();
        return true;
    }

    if (flags & CAPTURE_ERROR_MASK)
    {
        // print_errors(flags, payload, size);
        return true;
    }

    if (pid == Pid_In)
    {
        last_pid_in = true;
    }
    else
    {
        if (last_pid_in && (pid == Pid_Data0 || pid == Pid_Data1 || pid == Pid_Data2) && size - 4 == 8)
        {
            int v = (last_payload[3] << 8) | last_payload[2];
            int addr = v & 0x7f;
            int ep = (v >> 7) & 0xf;

            char pkts[256] = {0};
            size_t sizepkt = sprintf(pkts, "IN: 0x%x/0x%x 0x%x 0x%x 0x%x 0x%x 0x%x 0x%x 0x%x 0x%x;\r\n", addr, ep,
                                     last_payload[2], last_payload[3], last_payload[4], last_payload[5],
                                     last_payload[6], last_payload[7], last_payload[8], last_payload[9]);

            puts(pkts);

            my_spi_to_esp_write_blocking(pkts, sizepkt);
            total_packets_sended++;
        }

        last_pid_in = false;
    }

    return true;
}

void core1_main()
{
    volatile dbuff_t *readed_last = NULL;

    init_esp_seq();

    total_packets_sended = 0;
    unsigned int last_sended = 0;
    unsigned int g = 0;
    unsigned int z = 90000000 + 1;

    while (1)
    {
        static unsigned char line[32] = {0};

        if (multicore_fifo_rvalid())
        {
            last_dbuff = multicore_fifo_pop_blocking();
            multicore_fifo_push_blocking(0x69696969);
            process_buffer();
            display_buffer();
        }
        else
        {
            if (last_sended != total_packets_sended && g++ > 20000000)
            {
                z = 0;
                g = 0;
                last_sended = total_packets_sended;
                sprintf(line, "HWv%s packets sended: 0x%x", hwver_name, total_packets_sended);
                uart_write_blocking(uart0, line, strlen(line) + 1);
                puts(line);
            }
            else if (z++ > 90000000)
            {
                z = 0;
                g = 0;
                sprintf(line, "HWv%s packets sended: 0x%x", hwver_name, total_packets_sended);
                uart_write_blocking(uart0, line, strlen(line) + 1);
                puts(line);
            }
        }
    }
}
