==> therealdreg/okhi/stuff/oldusb/rp/okhi.c <==
#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include "rp2040.h"
#include "hal_gpio.h"
#include "globals.h"
#include "utils.h"
#include "uart.h"
#include "spi.h"
#include "pio_asm.h"
#define STATUS_TIMEOUT     500000 // us

static bool print_packet(void)
{
  int flags = last_dbuff->g_buffer[g_display_ptr];
  int time  = last_dbuff->g_buffer[g_display_ptr+1];
  int ftime = time - g_ref_time;
  int delta = time - g_prev_time;
  int size  = flags & CAPTURE_SIZE_MASK;
  uint8_t *payload = (uint8_t *)&(last_dbuff->g_buffer[g_display_ptr+2]);
  int pid = payload[1] & 0x0f;
  static bool last_pid_in = false;
  static uint8_t *last_payload = NULL;

  last_payload = (uint8_t *)&(last_dbuff->g_buffer[g_display_ptr+2]);

  if (g_check_delta && delta > MAX_PACKET_DELTA)
  {
    //display_puts("Time delta between packets is too large, possible buffer corruption.\r\n");
    return false;
  }

  g_display_ptr += (((size+3)/4) + 2);

  g_prev_time = time;
  g_check_delta = true;

  if (flags & CAPTURE_LS_SOF)
    pid = Pid_Sof;

  if ((g_display_time == DisplayTime_SOF && pid == Pid_Sof) || (g_display_time == DisplayTime_Previous))
    g_ref_time = time;

  if (g_folding)
  {
    if (pid != Pid_Sof)
      return true;

    if (flags & CAPTURE_MAY_FOLD)
    {
      g_fold_count++;
      return true;
    }

    //print_g_fold_count(g_fold_count);
    g_folding = false;
  }

  if (flags & CAPTURE_MAY_FOLD && g_display_fold == DisplayFold_Enabled)
  {
    g_folding = true;
    g_fold_count = 1;
    return true;
  }

  //print_time(ftime);

  if (flags & CAPTURE_RESET)
  {
    //print_reset();

    if (g_display_time == DisplayTime_Reset)
      g_ref_time = time;

    g_check_delta = false;

    return true;
  }

  if (flags & CAPTURE_LS_SOF)
  {
    //print_ls_sof();
    return true;
  }

  if (flags & CAPTURE_ERROR_MASK)
  {
    //print_errors(flags, payload, size);
    return true;
  }

  if (pid == Pid_In)
  {
    last_pid_in = true;
  }
  else
  {
    if (last_pid_in && (pid == Pid_Data0 || pid == Pid_Data1 || pid == Pid_Data2) && size - 4 == 8)
    {
        int v = (last_payload[3] << 8) | last_payload[2];
        int addr = v & 0x7f;
        int ep = (v >> 7) & 0xf;

        
        char pkts[256] = {0};
        size_t sizepkt = msprintf(pkts, "IN: 0x%x/%d 0x%x 0x%x 0x%x 0x%x 0x%x 0x%x 0x%x 0x%x;\r\n", addr, ep, last_payload[2], last_payload[3], last_payload[4], last_payload[5], last_payload[6], last_payload[7], last_payload[8], last_payload[9]);

        uart1_puts(pkts);

        ospi_write_read_blocking(pkts, pkts, sizepkt);
        delay_ms(1);
    }

    last_pid_in = false;
  }

  return true;
}

static void core1_main(void)
{
  HAL_GPIO_TRIGGER_in();
  HAL_GPIO_TRIGGER_pullup();

  while (1)
  {
    capture_buffer();
  }
}
